--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa",
+    "build:electron": "quasar build -m electron",
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -18,7 +19,7 @@
     "axios": "^0.18.1",
     "devextreme": "^19.1.4",
     "devextreme-vue": "^19.1.4",
-    "quasar": "^1.0.0",
+    "quasar": "^1.0.5",
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
